[package]
name = "wintheme"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A library for reading Windows themes."
license = "BSL-1.0 OR Apache-2.0"
keywords = ["windows", "theme", "ui"]
categories = ["api-bindings", "gui-toolkit"]
repository = "https://github.com/notgull/wintheme"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
default-features = false
features = ["Win32_UI_Controls", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"]

[target.'cfg(windows)'.build-dependencies]
autocfg = "1.1.0"

[workspace]
members = ["generator"]
